# sphinx-bluebrain-theme

./: .gitignore  .pydocstylerc  .readthedocs.yml  .travis.yml  AUTHORS.txt  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini  translate_templates.py
.github/workflows/: build.yml  main.yml  publish-pkg.yml  publish.yml  run-tox.yml
ci/: check-regressions.py
doc/: requirements_rtd.txt
doc/source/: building.rst  conf.py  development.rst  index.rst  mkdocs2sphinx.rst  overview.rst  redirect.rst  regression.rst  sample.py  sample.rst  usage.rst  utilities.rst
doc/source/_static/: custom.css
mkdocs2sphinx/: __init__.py  clear_blocks.py  convert_files.py
sphinx_bluebrain_theme/: __init__.py  base.html  layout.html  search.html
sphinx_bluebrain_theme/ext/: details.py  iframe.py  tabs.py
sphinx_bluebrain_theme/partials/: header.html  hero.html  language.html  nav-item.html  nav.html  palette.html  search.html  social.html  source.html  tabs-item.html  tabs.html  toc-item.html  toc.html
sphinx_bluebrain_theme/partials/language/: af.html  ar.html  ca.html  cs.html  da.html  de.html  en.html  es.html  fa.html  fi.html  fr.html  gl.html  gr.html  he.html  hi.html  hr.html  hu.html  id.html  it.html  ja.html  kr.html  nl.html  nn.html  no.html  pl.html  pt.html  ru.html  sh.html  si.html  sk.html  sr.html  sv.html  tr.html  uk.html  vi.html  zh-Hant.html  zh-TW.html  zh.html
sphinx_bluebrain_theme/static/javascripts/: application.718059d6.js  modernizr.74668098.js
sphinx_bluebrain_theme/static/javascripts/lunr/: lunr.da.js  lunr.de.js  lunr.du.js  lunr.es.js  lunr.fi.js  lunr.fr.js  lunr.hu.js  lunr.it.js  lunr.ja.js  lunr.jp.js  lunr.multi.js  lunr.nl.js  lunr.no.js  lunr.pt.js  lunr.ro.js  lunr.ru.js  lunr.stemmer.support.js  lunr.sv.js  lunr.th.js  lunr.tr.js  tinyseg.js  wordcut.js
sphinx_bluebrain_theme/static/stylesheets/: application-palette.3e3d1dff.css  application.4031d38b.css  theme.css_t
sphinx_bluebrain_theme/utils/: navutils.py  toc_builder.py
src/: __init__.py  layout.html  theme.conf
src/assets/javascripts/: theme.js_t  utils.js
src/assets/search/: search_index.json_t
src/assets/stylesheets/: bluebrain_style.css  theme.css  theme.css_t
src/ext/: __init__.py  tabs.py
src/partials/: footer.html  header.html  social.html
src/templates/stylesheets/: open-sans.css  sphinx_style.css  titillium-web.css
src/utils/: __init__.py  _importlib.py  autodoc_override.py  filters.py  inject_context.py  metadata.py  navutils.py  search_builder.py
tests/: __init__.py  test_blocks.py  test_convert.py  test_filters.py  test_inject_context.py  test_metadata.py  test_navutils.py  test_search_index.py
tests/data/: __init__.py  regression.html  regression_py27.html  regression_py36.html  regression_sphinx_7.1.html
