[bdist_wheel]
universal=1

[metadata]
name = sphinx-bluebrain-theme
author = Blue Brain Project, EPFL
description = Blue Brain Project theme for Sphinx
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/BlueBrain/sphinx-bluebrain-theme
project_urls =
    Tracker = https://github.com/BlueBrain/sphinx-bluebrain-theme/issues
    Source = https://github.com/BlueBrain/sphinx-bluebrain-theme
license = MIT License
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx :: Theme
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation

[options]
python_requires = >=3.8
setup_requires =
    setuptools
    setuptools_scm
install_requires =
    sphinx>=4.2.0
    Jinja2~=3.0
    importlib-resources; python_version == "3.8"
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    mkdocs2sphinx
    mkdocs-material
    tests

[options.package_data]
sphinx_bluebrain_theme = *

[options.entry_points]
sphinx.html_themes =
    sphinx-bluebrain-theme = sphinx_bluebrain_theme

[pycodestyle]
# E731: do not assign a lambda expression, use a def
# W503: line break after binary operator
# W504: line break before binary operator
# E203: whitespace before ':'
# E265: block comment should start with '# '
ignore = E731,W503,W504,E203,E265
max-line-length = 100

[pydocstyle]
# D401: allow descriptive instead of imperative (Google style)
# D413: no blank line afer last section
add-ignore = D401, D413

[pylint]

[pylint.MESSAGES CONTROL]
disable=fixme,invalid-name,len-as-condition,no-else-return

[pylint.FORMAT]
# Maximum number of characters on a single line.
max-line-length=100

[pylint.DESIGN]
# Maximum number of arguments for function / method
max-args=8
# Argument names that match this expression will be ignored. Default to name
# with leading underscore
ignored-argument-names=_.*
# Maximum number of locals for function / method body
max-locals=15
# Maximum number of return / yield for function / method body
max-returns=6
# Maximum number of branch for function / method body
max-branches=14
# Maximum number of statements in function / method body
max-statements=50
# Maximum number of parents for a class (see R0901).
max-parents=7
# Maximum number of attributes for a class (see R0902).
max-attributes=40
# Minimum number of public methods for a class (see R0903).
min-public-methods=0
# Maximum number of public methods for a class (see R0904).
max-public-methods=60

[pylint.SIMILARITIES]
# checks for similarities and duplicated code. This computation may be
# memory / CPU intensive, so you should disable it if you experiments some
# problems.
# Minimum lines number of a similarity.
min-similarity-lines=25
# Ignore comments when computing similarities.
ignore-comments=yes
# Ignore docstrings when computing similarities.
ignore-docstrings=yes
